--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -1,5 +1,6 @@
 load("@rules_python//python:defs.bzl", "py_binary")
 load("@com_github_scionproto_scion_python_deps//:requirements.bzl", "requirement")
+load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
 
 exports_files([
     "gzip_exec_interp",
@@ -26,22 +27,20 @@ py_binary(
     ],
 )
 
-py_binary(
+py_console_script_binary(
     name = "supervisord",
-    srcs = ["supervisord.py"],
+    pkg = requirement("supervisor"),
     visibility = ["//visibility:public"],
     deps = [
-        requirement("supervisor"),
         requirement("supervisor-wildcards"),
     ],
 )
 
-py_binary(
+py_console_script_binary(
     name = "supervisorctl",
-    srcs = ["supervisorctl.py"],
+    pkg = requirement("supervisor"),
     visibility = ["//visibility:public"],
     deps = [
-        requirement("supervisor"),
         requirement("supervisor-wildcards"),
     ],
 )
