Include rpms for all platforms.

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -44,6 +44,9 @@ steps:
             tar -chaf scion_${SCION_VERSION}_deb_armel.tar.gz *_${SCION_VERSION}_armel.deb
             tar -chaf scion_${SCION_VERSION}_openwrt_x86_64.tar.gz *_${SCION_VERSION}_x86_64.ipk
             tar -chaf scion_${SCION_VERSION}_rpm_x86_64.tar.gz *_${SCION_VERSION}_x86_64.rpm
+            tar -chaf scion_${SCION_VERSION}_rpm_arm64.tar.gz *_${SCION_VERSION}_x86_64.rpm
+            tar -chaf scion_${SCION_VERSION}_rpm_i386.tar.gz *_${SCION_VERSION}_x86_64.rpm
+            tar -chaf scion_${SCION_VERSION}_rpm_armel.tar.gz *_${SCION_VERSION}_x86_64.rpm
             popd
             ls installables
           post-artifact: |
@@ -57,6 +60,9 @@ steps:
             - <a href="artifact://installables/scion_${SCION_VERSION}_openwrt_x86_64.tar.gz">x86_64</a>
             #### Packages :rpm:
             - <a href="artifact://installables/scion_${SCION_VERSION}_rpm_x86_64.tar.gz">x86_64</a>
+            - <a href="artifact://installables/scion_${SCION_VERSION}_rpm_arm64.tar.gz">x86_64</a>
+            - <a href="artifact://installables/scion_${SCION_VERSION}_rpm_i386.tar.gz">x86_64</a>
+            - <a href="artifact://installables/scion_${SCION_VERSION}_rpm_armel.tar.gz">x86_64</a>
             EOF
     key: dist
     retry: *automatic-retry
