Mild doc improvements.
Update the TC members list.
Add a link to the online godoc in the Contribute section.
Try and improve package descriptions (in the router only for now) to make
the code easier to navigate with godoc.

--- a/router/BUILD.bazel
+++ b/router/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "connector.go",
         "dataplane.go",
+        "doc.go",
         "fnv1aCheap.go",
         "metrics.go",
         "serialize_proxy.go",
