--- a/demo/drkey/BUILD.bazel
+++ b/demo/drkey/BUILD.bazel
@@ -32,6 +32,7 @@ go_library(
         "//private/app/flag:go_default_library",
         "@com_github_spf13_pflag//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//credentials/insecure:go_default_library",
         "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
     ],
 )
