--- a/router/bfd/BUILD.bazel
+++ b/router/bfd/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
     deps = [
         "//pkg/log:go_default_library",
         "//pkg/private/serrors:go_default_library",
+        "//router/control:go_default_library",
         "@com_github_gopacket_gopacket//layers:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
     ],
