--- a/pkg/private/common/BUILD.bazel
+++ b/pkg/private/common/BUILD.bazel
@@ -2,20 +2,16 @@ load("//tools/lint:go.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "defs.go",
-        "errors.go",
-    ],
+    srcs = ["defs.go"],
     importpath = "github.com/scionproto/scion/pkg/private/common",
     visibility = ["//visibility:public"],
 )
 
 go_test(
     name = "go_default_test",
-    srcs = [
-        "defs_test.go",
-        "errors_test.go",
+    srcs = ["defs_test.go"],
+    deps = [
+        ":go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
     ],
-    embed = [":go_default_library"],
-    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
