--- a/private/keyconf/BUILD.bazel
+++ b/private/keyconf/BUILD.bazel
@@ -5,10 +5,7 @@ go_library(
     srcs = ["keyconf.go"],
     importpath = "github.com/scionproto/scion/private/keyconf",
     visibility = ["//visibility:public"],
-    deps = [
-        "//pkg/private/common:go_default_library",
-        "//pkg/private/serrors:go_default_library",
-    ],
+    deps = ["//pkg/private/serrors:go_default_library"],
 )
 
 go_test(
