--- a/private/storage/db/BUILD.bazel
+++ b/private/storage/db/BUILD.bazel
@@ -14,7 +14,6 @@ go_library(
     importpath = "github.com/scionproto/scion/private/storage/db",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/private/common:go_default_library",
         "//pkg/private/prom:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "@org_modernc_sqlite//:go_default_library",
@@ -25,4 +24,5 @@ go_test(
     name = "go_default_test",
     srcs = ["errors_test.go"],
     embed = [":go_default_library"],
+    deps = ["@com_github_stretchr_testify//require:go_default_library"],
 )
