--- a/router/BUILD.bazel
+++ b/router/BUILD.bazel
@@ -6,7 +6,6 @@ go_library(
         "connector.go",
         "dataplane.go",
         "doc.go",
-        "fnv1aCheap.go",
         "metrics.go",
         "serialize_proxy.go",
         "svc.go",
@@ -51,13 +50,13 @@ go_test(
         "dataplane_test.go",
         "export_test.go",
         "svc_test.go",
+        "underlay_import_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/experimental/epic:go_default_library",
         "//pkg/private/ptr:go_default_library",
-        "//pkg/private/serrors:go_default_library",
         "//pkg/private/util:go_default_library",
         "//pkg/scrypto:go_default_library",
         "//pkg/slayers:go_default_library",
@@ -70,7 +69,7 @@ go_test(
         "//private/underlay/conn:go_default_library",
         "//router/control:go_default_library",
         "//router/mock_router:go_default_library",
-        "//router/underlayproviders:go_default_library",
+        "//router/underlayproviders/udpip:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_gopacket_gopacket//:go_default_library",
         "@com_github_gopacket_gopacket//layers:go_default_library",
