--- a/acceptance/topo_daemon_reload/BUILD.bazel
+++ b/acceptance/topo_daemon_reload/BUILD.bazel
@@ -1,6 +1,6 @@
 load("//tools/lint:go.bzl", "go_test")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
-load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
+load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
 
 go_test(
     name = "go_default_test",
@@ -24,7 +24,7 @@ go_test(
 )
 
 # daemon container
-oci_tarball(
+oci_load(
     name = "daemon.tar",
     format = "docker",
     image = ":daemon_image",
