--- a/doc/BUILD.bazel
+++ b/doc/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@rules_python//python:pip.bzl", "compile_pip_requirements")
-load("@com_github_scionproto_scion_python_doc_deps//:requirements.bzl", "all_requirements", "entry_point", "requirement")
+load("@scion_python_doc_deps//:requirements.bzl", "all_requirements", "entry_point", "requirement")
 load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
 load(":lint.bzl", "sphinx_lint_test")
 
