--- a/pkg/snet/BUILD.bazel
+++ b/pkg/snet/BUILD.bazel
@@ -13,6 +13,8 @@ go_library(
         "router.go",
         "scmp.go",
         "snet.go",
+        "sock_error_posix.go",
+        "sock_error_windows.go",
         "svcaddr.go",
         "udpaddr.go",
         "writer.go",
@@ -37,7 +39,12 @@ go_library(
         "//private/topology:go_default_library",
         "//private/topology/underlay:go_default_library",
         "@com_github_gopacket_gopacket//:go_default_library",
-    ],
+    ] + select({
+        "@io_bazel_rules_go//go/platform:windows": [
+            "@org_golang_x_sys//windows:go_default_library",
+        ],
+        "//conditions:default": [],
+    }),
 )
 
 go_test(
