--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -174,6 +174,7 @@ bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")
 bazel_dep(name = "rules_proto", version = "7.1.0")
 bazel_dep(name = "rules_proto_grpc", version = "5.0.1")
 bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")
+bazel_dep(name = "rules_distroless", version = "0.3.8")
 
 # Dependencies that are not available in Bazel registry yet
 non_module_deps = use_extension(":non_module_deps.bzl", "non_module_deps")
@@ -183,7 +184,6 @@ use_repo(
     "rules_antlr",
     "openwrt_x86_64_SDK",
     "buf",
-    "rules_debian_packages",
 )
 
 # Support cross building and packaging for openwrt_amd64 via the openwrt SDK
