--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -168,13 +168,24 @@ find_rpm = use_extension("@rules_pkg//toolchains/rpm:rpmbuild_configure.bzl", "f
 use_repo(find_rpm, "rules_pkg_rpmbuild")
 register_toolchains("@rules_pkg_rpmbuild//:all")
 
+# Debian rules
+bazel_dep(name = "rules_distroless", version = "0.3.8")
+
+apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
+apt.install(
+    name = "tester_deb",
+    lock = "//docker:tester_deb.lock.json",
+    manifest = "//docker:tester_deb.yaml",
+)
+use_repo(apt, "tester_deb")
+
 # Other dependencies
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")
 bazel_dep(name = "rules_proto", version = "7.1.0")
 bazel_dep(name = "rules_proto_grpc", version = "5.0.1")
 bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")
-bazel_dep(name = "rules_distroless", version = "0.3.8")
+bazel_dep(name = "rules_cc", version = "0.1.1")
 
 # Dependencies that are not available in Bazel registry yet
 non_module_deps = use_extension(":non_module_deps.bzl", "non_module_deps")
