--- a/router/underlayproviders/udpip/BUILD.bazel
+++ b/router/underlayproviders/udpip/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/log:go_default_library",
+        "//pkg/private/serrors:go_default_library",
         "//pkg/slayers:go_default_library",
         "//private/underlay/conn:go_default_library",
         "//router:go_default_library",
