--- a/private/underlay/conn/BUILD.bazel
+++ b/private/underlay/conn/BUILD.bazel
@@ -5,18 +5,86 @@ go_library(
     srcs = [
         "address.go",
         "conn.go",
+        "conn_linux.go",
+        "conn_other.go",
         "flags.go",
         "flags_linux.go",
     ],
     importpath = "github.com/scionproto/scion/private/underlay/conn",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/log:go_default_library",
         "//pkg/private/serrors:go_default_library",
-        "//private/underlay/sockctrl:go_default_library",
         "@org_golang_x_net//ipv4:go_default_library",
         "@org_golang_x_net//ipv6:go_default_library",
-    ],
+    ] + select({
+        "@io_bazel_rules_go//go/platform:aix": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:android": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+            "@org_golang_x_sys//unix:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:darwin": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:dragonfly": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:freebsd": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:illumos": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:ios": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:js": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:linux": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+            "@org_golang_x_sys//unix:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:netbsd": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:openbsd": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:osx": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:plan9": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:qnx": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:solaris": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:windows": [
+            "//pkg/log:go_default_library",
+            "//private/underlay/sockctrl:go_default_library",
+        ],
+        "//conditions:default": [],
+    }),
 )
 
 go_test(
